<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/createRecipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/addRecipeImageButton"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorTan"
        android:scaleType="fitCenter"
        android:src="@mipmap/food_place_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recipeTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Recipe Title"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeImageButton" />

    <EditText
        android:id="@+id/recipeDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Recipe Description"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeTitleText" />

    <TextView
        android:id="@+id/createDifficultyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cabin_bold"
        android:text="Difficulty"
        android:textColor="?android:attr/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServingsText" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createDifficultyView">

        <RadioButton
            android:id="@+id/beginnerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="Beginnner" />

        <RadioButton
            android:id="@+id/intermediateRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="Intermediate" />

        <RadioButton
            android:id="@+id/advancedRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="Advanced" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:fontFamily="@font/cabin_bold"
        android:text="Directions"
        android:textColor="?android:attr/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <LinearLayout
        android:id="@+id/directionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/direction1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/direction2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/direction3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cabin_bold"
        android:text="Ingredients"
        android:textColor="?android:attr/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreDirectionsButton" />

    <LinearLayout
        android:id="@+id/ingredientsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/ingredient1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ingredient2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ingredient3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/moreDirectionsButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="More"
        android:textColor="@color/colorLight"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/directionsLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/directionsLinearLayout" />

    <Button
        android:id="@+id/moreIngredientsButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="More"
        android:textColor="@color/colorLight"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/ingredientsLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLinearLayout" />

    <EditText
        android:id="@+id/ServingsText"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Servings"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeDescriptionText" />

    <EditText
        android:id="@+id/totalTimeText"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Time"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ServingsText"
        app:layout_constraintTop_toTopOf="@+id/ServingsText" />

    <Button
        android:id="@+id/addRecipeButton"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cabin_bold"
        android:text="add "
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moreIngredientsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
