...
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorTan"
            android:backgroundTint="@null"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captionEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/food_place_holder"
            android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/captionEditText"
...
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPostPicButton"
        app:srcCompat="@mipmap/profile_default_round" />

    <Button
        android:id="@+id/addPostButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Add "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
