...
                app:layout_constraintTop_toTopOf="parent">

            </androidx.cardview.widget.CardView>


            <ImageButton
                android:id="@+id/captureButton"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:clickable="true"
...
